<resources>
    <string name="app_name">My Charlotte</string>
    <string name="homepage">Where would you like to start?</string>

    <string name="first_button">Browse Events</string>
    <string name="second_button">View Map</string>
    <string name="third_button">My Calender</string>
    <string name="fourth_button">City Info</string>

    <string name="wc">Waste Collection</string>
    <string name="aw_button">Air/Water</string>
    <string name="traffic_button">Traffic</string>
    <string name="flights_button">Flights</string>
    <string name="br_button">Bus Routes</string>
    <string name="cu_button">Contact Us</string>

    <string name="title_activity_home_screen">Home Screen</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Charlotte</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

</resources>