<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoScren"
    android:background="@drawable/infobg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="240dp"
        android:layout_height="90dp"
        android:text="@string/fourth_button"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/button5"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:background="@drawable/infobuttons"
        android:drawableLeft="@drawable/waste_coll"
        android:typeface="sans"
        android:onClick="waste_coll"
        android:text = "@string/wc"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:drawableLeft="@mipmap/aw_icon"
        android:background="@drawable/infobuttons"
        android:typeface = "sans"
        android:onClick="air_water"
        android:text="@string/aw_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:drawableLeft="@mipmap/car_icon"
        android:typeface = "sans"
        android:text="@string/traffic_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:background="@drawable/infobuttons"
        android:onClick="traffic"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:drawableLeft="@mipmap/flight_icon"
        android:typeface = "sans"
        android:text="@string/flights_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:background="@drawable/infobuttons"
        android:onClick="flights"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:drawableLeft="@mipmap/bus_icon"
        android:typeface="sans"
        android:text="@string/br_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:background="@drawable/infobuttons"
        android:onClick="busr"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/button10"
        android:layout_width="220dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@mipmap/cu_icon"
        android:typeface="sans"
        android:text="@string/cu_button"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:onClick="contact"
        android:background="@drawable/infobuttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

</android.support.constraint.ConstraintLayout>

